# container_wrapper

./: README.md  config.json  pyproject.toml
.github/workflows/: docker.yml
Payload_Type/container_wrapper/: Dockerfile  main.py  rabbitmq_config.json
Payload_Type/container_wrapper/container_wrapper/: builder.py
Payload_Type/service_wrapper/service_wrapper/: builder.py
documentation-wrapper/container_wrapper/: _index.md
